# DHLAB

./: .cz.toml  .gitignore  .pylintrc  .readthedocs.yaml  .readthedocs.yml  3_Kollokasjoner.ipynb  CHANGELOG.md  Installasjon av forskjellige pakker.ipynb  LICENSE  LICENSE.txt  README.md  Untitled.ipynb  bokhylla_api.py  collocations.py  conc_coll_mediatype  conc_coll_mediatype.py  define_functions.ipynb  dev-requirements.txt  dhlab.env  dhlab_v2.py  extract_word_pdf.py  graph_networkx_louvain.py  language_check.ipynb  language_check.py  mkdocs.yml  mods_meta  mods_meta.py  module_update.py  nb_elastic_collocations.py  nb_external_files.py  nbpictures.py  nbtext.py  nbtokenizer.py  optional_requirements.txt  pylint.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.ipynb  (+3 more)
.github/workflows/: CI.yml  bump-version.yml  code-check.yml  code_check.yml  deployment.yml  docs.yml  lint.yml  poetry_release.yml  pythonpublish.yml  release.yml  sanity_check.yml  test.yml  upload-package.yml
.ipynb_checkpoints/: Installasjon av forskjellige pakker-checkpoint.ipynb  dhlab_v2-checkpoint.py  nbtext-checkpoint.py
css_style_sheets/: nb_notebook.css  nb_notebook_2.css  notebook_blue.css
db1/: konkordans_ft.ipynb
db1/.ipynb_checkpoints/: konkordans-checkpoint.py  metadata_ft-checkpoint.ipynb
dhlab/: LICENSE.TXT  README.md  __init__.py  __init__.pyi  constants.py  dhlab_v2.py  graph_networkx_louvain.py  language_check.py  mods_meta.py  module_update.py  nb_external_files.py  nbpictures.py  nbtext.py  nbtokenizer.py  parse.py  requirements.txt  token_map.py
dhlab-meta-package/: pyproject.toml
dhlab-meta-package/docs/source/: docs_example_use.md  docs_functionality.md  index.md  term_definitions.md
dhlab-meta-package/src/dhlab/: __init__.py  constants.py
dhlab-namespace/dhlab-api/: pyproject.toml
dhlab-namespace/dhlab-api/src/dhlab/api/: dhlab_api.py  nb_ngram_api.py  nb_search_api.py
dhlab-namespace/dhlab-api/src/dhlab/metadata/: __init__.py  metadata.py  natbib.py
dhlab-namespace/dhlab-core/: pyproject.toml
dhlab-namespace/dhlab-core/src/dhlab/ngram/: __init__.py
dhlab-namespace/dhlab-core/src/dhlab/text/: __init__.py  dhlab_object.py  geo_data.py  parse.py
dhlab-namespace/dhlab-core/tests/: test_Concordance.py  test_Counts.py  test_corpus_collection.py  test_dispersion.py
dhlab-namespace/dhlab-future/: pyproject.toml
dhlab-namespace/dhlab-legacy/: pyproject.toml
dhlab-namespace/dhlab-legacy/src/dhlab/legacy/: graph_networkx_louvain.py  module_update.py  nb_external_files.py  nbpictures.py  token_map.py
dhlab-namespace/dhlab-legacy/tests/: test_nbtext.py
dhlab-namespace/dhlab-utils/: pyproject.toml
dhlab-namespace/dhlab-utils/src/dhlab/images/: __init__.py  nbpictures.py
dhlab/api/: Untitled.ipynb  __init__.py  dhlab_api.py  nb_ngram_api.py  nb_search_api.py  utils.py
dhlab/db1/: metadata_ft.ipynb
dhlab/future/: corpus_conc_coll.py  ngram.py
dhlab/images/: __init__.py  nbpictures.py
dhlab/legacy/: __init__.py  graph_networkx_louvain.py  module_update.py  nb_external_files.py  nbpictures.py  nbtext.py  token_map.py
dhlab/metadata/: __init__.py  metadata.py  natbib.py  natbib2.py
dhlab/ngram/: __init__.py  __init__.pyi  nb_ngram.py  ngram.py
dhlab/text/: __init__.py  __init__.pyi  chunking.py  collocations.py  conc_coll.py  concordance.py  cooccurences.py  corpus.py  corpus_collection.py  dhlab_object.py  dispersion.py  frequencies.py  geo_data.py  nb_search_text.py  nbtokenizer.py  parse.py  utils.py  wildcard.py
dhlab/trigram_lang_model/: nob_trilangmodel.json
dhlab/utils/: __init__.py  display.py  files.py
dhlab/visualize/: __init__.py  cloud.py  df.py
dhlab/wordbank/: __init__.py  __init__.pyi  wordbank.py
docs/: CHANGELOG.md  DOCS_CHANGELOG.md  LICENSE  api.dhlab_api.rst  api.md  api.nb_ngram_api.rst  api.nb_search_api.rst  api_docs.rst  bibliography.md  code_ref.rst  conf.py  docs_changelog.rst  docs_example_use.md  docs_examples.rst  docs_functionality.md  docs_getting_started.rst  docs_installation.md  docs_notebooks.rst  docs_ways_to_use.md  example_usage.rst  getting_started.rst  glossary.rst  images.md  images.nbpictures.rst  images_docs.rst  index.md  index.rst  index_home.md  installation.rst  metadata.md  metadata.metadata.rst  metadata_docs.rst  nbtext_docs.rst  ngram.md  ngram.ngram.rst  ngram_docs.rst  notebooks.rst  old_index.rst  package_summary.rst  reference.md  (+14 more)
docs/_templates/autosummary/: base.rst  class.rst  module.rst  toplevel_class.rst
docs/references/: helpers.rst
docs/source/: conf.py  docs_example_use.md  docs_functionality.md  index.md  index_home.md  reference.md  requirements.txt
old_dhlab/: graph_networkx_louvain.py  token_map.py
tests/: test_Collocation.py  test_Concordance.py  test_Corpus.py  test_Counts.py  test_conc_counts.py  test_dispersion.py  test_natbib.ipynb  test_natbib.py  test_natbib2.py  test_nbtext.py  test_word_conc.py
tests/api/: dhlabtest.py  utils.py
tests/api/dhlab_api/: test__ngram_doc.py  test_collocation.py  test_concordance.py  test_concordance_counts.py  test_document_corpus.py  test_evaluate_documents.py  test_find_urns.py  test_geo_lookup.py  test_get_chunks.py  test_get_chunks_para.py  test_get_dispersion.py  test_get_document_corpus.py  test_get_document_frequencies.py  test_get_identifiers.py  test_get_metadata.py  test_get_places.py  test_get_reference.py  test_get_urn_frequencies.py  test_get_word_frequencies.py  test_images.py  test_konkordans.py  test_ner_from_urn.py  test_ngram_book.py  test_ngram_news.py  test_ngram_periodicals.py  test_pos_from_urn.py  test_query_imagination_corpus.py  test_reference_words.py  test_show_spacy_models.py  test_totals.py  test_urn_collocation.py  test_wildcard_search.py  test_word_form.py  test_word_form_many.py  test_word_lemma.py  test_word_paradigm.py  test_word_paradigm_many.py  test_word_variant.py
tests/api/nb_ngram_api/: test_get_ngram.py  test_make_word_graph.py
trigram_lang_model/: nno_trilangmodel.json
