# This file manages the dhlab namespace packages.
# The dhlab meta-package lives separately in ${PROJECT_ROOT}/dhlab-meta-package

[project]
dependencies = []
requires-python = ">=3.10"

[dependency-groups]
test = ["pytest>=8.3.5"]

dhlab-namespace = [
    "-e file:///${PROJECT_ROOT}/dhlab-namespace/dhlab-api",
    "-e file:///${PROJECT_ROOT}/dhlab-namespace/dhlab-core",
    "-e file:///${PROJECT_ROOT}/dhlab-namespace/dhlab-future",
    "-e file:///${PROJECT_ROOT}/dhlab-namespace/dhlab-legacy",
    "-e file:///${PROJECT_ROOT}/dhlab-namespace/dhlab-utils",
]

dhlab-meta = [
    "-e file:///${PROJECT_ROOT}/dhlab-meta-package",
]
