[project]
authors = [
    {name = "The Digital Humanities Lab at The National Library of Norway (NB)", email = "dh-lab@nb.no"},
]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "ipython",
    "matplotlib",
    "networkx",
    "pandas",
    "python-louvain",
    "requests",
    "seaborn",
    "openpyxl",
    "beautifulsoup4",
    "jinja2",
    "tqdm",
    "nb-tokenizer",
    "lazy-loader",
]
name = "dhlab"
version = "2.41.0"
description = "Text and image analysis of the digital collection (books, newspapers, periodicals, and images) at the National Library of Norway"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Bug Tracker" = "https://github.com/NationalLibraryOfNorway/DHLAB/issues"
homepage = "https://www.nb.no/dh-lab/"
repository = "https://github.com/NationalLibraryOfNorway/DHLAB"
documentation = "https://nationallibraryofnorway.github.io/DHLAB/"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[dependency-groups]
docs = [
    "Sphinx",
    "furo",
    "myst-parser",
    "readthedocs-sphinx-search",
    "sphinx-copybutton",
    "sphinx-togglebutton",
    "sphinx-design",
    "sphinx-inline-tabs",
    "mkdocs",
    "mkdocstrings[python]",
    "mkdocs-material",
    "mkdocs-section-index",
    "mkdocs-autorefs",
    "sphinx-autodoc2",
    "sphinx-book-theme",
    "linkify-it-py",
]
dev = [
    "ipykernel",
    "pytest",
    "pytest-cov",
    "ruff",
    "pandas-stubs",
    "types-requests",
]
test = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
]

[tool.poetry]
name = "dhlab"
version = "2.42.0"
description = "Text and image analysis of the digital collection (books, newspapers, periodicals, and images) at the National Library of Norway"
authors = ["The Digital Humanities Lab at The National Library of Norway (NB) <dh-lab@nb.no>"]
license = "MIT"
readme = "README.md"
homepage = "https://www.nb.no/dh-lab/"
repository = "https://github.com/NationalLibraryOfNorway/DHLAB"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
exclude = ["docs/", "tests/"]

[tool.poetry.dependencies]
python = ">=3.10"
ipython = "^8.17"
matplotlib = "^3.8"
networkx = "^3.2"
pandas = "^2.1" # NOTE: Synchronize pandas and pandas-stubs version
python-louvain = "^0.16"
requests = "^2.31" # NOTE: Synchronize requests and types-requests version
seaborn = "^0.13"
openpyxl = "^3.1"
beautifulsoup4 = "^4.12"
jinja2 = "^3.1"
tqdm = "^4.66"
nb-tokenizer = { version = "^0.1.0", python = ">=3.10, <4.0"}
lazy-loader = "^0.4"


[tool.poetry.group.test.dependencies]
mypy = "^1.6.1"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"

[tool.poetry-dynamic-versioning]
enable = false
bump  = false
vcs = "git"
format = "v{base}{stage}{revision}"

[tool.poetry-dynamic-versioning.substitution]
files = ["dhlab/_version.py"]

