[metadata]
name = dhlab
version = attr: dhlab._version.version
author = The Digital Humanities Lab at The National Library of Norway (NB)
author_email = dh-lab@nb.no
description = Text and image analysis of NB's digital collection
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
url = https://github.com/NationalLibraryOfNorway/DHLAB
project_urls =
    Documentation = https://dhlab.readthedocs.io
    Bug Tracker = https://github.com/NationalLibraryOfNorway/DHLAB/issues
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
zip_safe = True
include_package_data = True
install_requires =
    requests
    IPython
    beautifulsoup4
    matplotlib
    networkx
    pandas
    Pillow
    python_louvain
    requests
    seaborn



